--- a/css/main.css
+++ b/css/main.css
@@ -63,7 +63,9 @@ h1{
     padding: 1px;
     border: 1px solid #202124;
     position: relative;
+    transition: 950ms;
 }
+
 .calc-currency .calculator .calculator-container:hover {
     border: 1px solid #dadce0;
 }
